--- a/psykofarmakologi.rmd
+++ b/psykofarmakologi.rmd
@@ -1,5 +1,5 @@
 
-# Psykofarmakologi
+# Psykofarmakologi {#psychopharmacology}
 
  Monitoring: [@Hiemke2018]
 
@@ -12,30 +12,6 @@
 - Förstagradssläktingars respons på visst läkemedel
 
 - Följsamhet
-
-## Antidepressiva
-
-Selective serotonin reuptake inhibitors versus placebo in patients with major depressive disorder. A systematic review with meta-analysis and Trial Sequential Analysis
-
-### Effektivitet {#antidepressant-efficacy}
-
-Ciprianis studie
-
-Lägre efficacy hos äldre, se \@ref(depression-elderly).
-
-### Svårbehandlad depression
-
-STAR-D
-
-CANMAT
-
-Kombinara antidepressiva? Tilltalande kanske men verkar inte fungera i praktiken.
-
-### Biverkningar
-
-Antidessiva kan ge tex hyperhidros (antikolinerg effekt), ökad blödningsrisk (SSRI), QT-tidsförlängning. Se avsnittet biverkningar.
-
-
 
 ## SSRI vid graviditet och amning {#ssri-pregnancy}
 
